--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"author": "Jirka, adapted by Lukas",
 	"main": "Server.js",
 	"scripts": {
-		"start": "node Aufgabe_5/Client/SendData.js"
+		"start": "node SendData.js"
 	},
 	"engines": {
 		"node": "8.11.3"
